--- a/src/lob_backend/Cargo.toml
+++ b/src/lob_backend/Cargo.toml
@@ -6,9 +6,15 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [lib]
-crate-type = ["cdylib"]
+crate-type = ["cdylib", "lib"]
+
+[[bin]]
+name = "lob_backend_bin"
+path = "src/main.rs"
 
 [dependencies]
-candid = "0.8"
-ic-cdk = "0.7"
-ic-cdk-timers = "0.1" # Feel free to remove this dependency if you don't need timers
+candid = "0.9.6"
+ic-cdk = "0.10.0"
+ic-cdk-timers = "0.1"       # Feel free to remove this dependency if you don't need timers
+ic-cdk-macros = "0.7.1"
+serde = { version = "1.0" }
